Ports: Fix no results text not centred when wrapping

--- a/src/app/ports/styles/Ports.module.scss
+++ b/src/app/ports/styles/Ports.module.scss
@@ -98,3 +98,7 @@
   font-size: 128px;
   color: var(--bg4);
 }
+
+.noResultsText {
+  text-align: center;
+}
